--- a/direccionUsuario.html
+++ b/direccionUsuario.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -14,23 +15,28 @@
     ></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/index.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="assets/css/direccionUsuario.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="assets/iconos/factura (1).png" type="image/png" />
-    <title>| Inicio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@200;400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="shortcut icon"
+      href="assets/iconos/usuario-de-perfil.png"
+      type="image/x-icon"
+    />
+    <title>Document</title>
   </head>
-  <body class="bg-white">
+  <body>
     <div class="container">
       <div class="row shadow p-3 bg-white rounded" id="primerNav">
-        <div class="col">
+        <div class="col-lg-8">
           <ul class="nav float-left">
             <li class="nav-iem">
               <a href="registrarse.html" class="nav-link" link="nav">
@@ -52,8 +58,16 @@
             </li>
           </ul>
         </div>
+        <div class="col float-right">
+          <p style="margin-top: 30px; margin-right: 30px">Nombre de usuario</p>
+          <img
+            class="avatar"
+            src="assets/iconos/usuario-de-perfil.png"
+            alt=""
+          />
+        </div>
       </div>
-      <div class="row shadow-lg p-3 mb-5 bg-white rounded">
+      <div class="row">
         <div class="col">
           <nav
             class="navbar navbar-expand-lg navbar-light bg-white border rounded-top"
@@ -126,7 +140,7 @@
                     aria-haspopup="true"
                     aria-expanded="false"
                   >
-                    Enambles
+                    Ensambles
                   </a>
                   <div
                     class="dropdown-menu rounded-top shadow p-3"
@@ -158,127 +172,47 @@
           </nav>
         </div>
       </div>
-      <div class="row mt-lg-5">
+      <div class="row m-lg-4">
         <div class="col">
-          <div
-            id="carousel rounded-top"
-            class="carousel slide"
-            data-ride="carousel"
-          >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img
-                  class="d-block w-100"
-                  src="img/anuncios/whatsapp.jpg"
-                  alt="First slide"
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  class="d-block w-100"
-                  src="img/anuncios/banner.jpg"
-                  alt="Second slide"
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  class="d-block w-100"
-                  src="img/anuncios/asus.jpg"
-                  alt="Third slide"
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  class="d-block w-100"
-                  src="img/anuncios/ssd.jpg"
-                  alt="Third slide"
-                />
-              </div>
-            </div>
-            <a
-              class="carousel-control-prev"
-              href="#carouselExampleControls"
-              role="button"
-              data-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a
-              class="carousel-control-next"
-              href="#carouselExampleControls"
-              role="button"
-              data-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
+          <h1>Direccion</h1>
         </div>
       </div>
-      <div class="row justify-content-center">
-        <span class="text-success offers">-REBAJAS DE LA SEMANA-</span>
-      </div>
-      <div class="row" style="margin-top: 100px">
-        <div class="col">
-          <div class="card">
-            <img
-              class="card-img-top"
-              src="img/productos/oferta-pc-1.jpg"
-              alt="Card image cap"
+      <div class="row border-danger">
+        <div class="col mx-lg-5">
+          <form action="" name="infoPerosnal" id="infoPerosnal" method="POST">
+            <label for="nombre">Nombre</label>
+            <input
+              class="form-control"
+              name="nombre"
+              type="text"
+              placeholder="Jose sanchez"
             />
-            <div class="card-body">
-              <h5 class="card-title">COMPUTADORA CPU J1800</h5>
-              <p class="card-text text-success">Precio base $3,450.00</p>
-              <button class="btn btn-info btn-comprar">Comprar</button>
-              <button class="btn btn-agregar">
-                <i class="fas fa-cart-plus"></i>
-                Agregar
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              class="card-img-top"
-              src="img/productos/oferta-pc-1.jpg"
-              alt="Card image cap"
+            <label for="apellido">Apellido</label>
+            <input
+              class="form-control"
+              name="apellido"
+              type="text"
+              placeholder="Readonly input here..."
             />
-            <div class="card-body">
-              <h5 class="card-title">COMPUTADORA CPU J1800</h5>
-              <p class="card-text text-success">Precio base $3,450.00</p>
-              <button class="btn btn-info btn-comprar">Comprar</button>
-              <button class="btn btn-agregar">
-                <i class="fas fa-cart-plus"></i>
-                Agregar
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              class="card-img-top"
-              src="img/productos/oferta-pc-1.jpg"
-              alt="Card image cap"
+            <label for="direccion">Direccion</label>
+            <input
+              class="form-control"
+              name="direccion"
+              type="text"
+              placeholder="av.ejemplo #123"
             />
-            <div class="card-body">
-              <h5 class="card-title">COMPUTADORA CPU J1800</h5>
-              <p class="card-text text-success">Precio base $3,450.00</p>
-              <button class="btn btn-info btn-comprar">Comprar</button>
-              <button class="btn btn-agregar">
-                <i class="fas fa-cart-plus"></i>
-                Agregar
-              </button>
-            </div>
-          </div>
+            <label for="postal">Codigo Postal</label>
+            <input class="form-control" name="postal" type="number" />
+            <label for="ciudad">Ciudad</label>
+            <input class="form-control" name="ciudad" type="text" />
+            <label for="estado">Estado</label>
+            <select name="estado" id="estado" class="form-control">
+              <option value="0">Nuevo León</option>
+            </select>
+            <label for="telefono">Telefono</label>
+            <input class="form-control" name="telefono" type="number" />
+            <input type="submit" value="Guardar" class="btn btn-info mt-lg-5" />
+          </form>
         </div>
       </div>
     </div>
@@ -300,6 +234,7 @@
                 placeholder="Buscar"
                 aria-label="Search"
               />
+              <i class="fas fa-search" aria-hidden="true"></i>
               <input
                 type="submit"
                 value="Suscribirse"
@@ -366,21 +301,5 @@
         </div>
       </div>
     </footer>
-
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
