--- a/perfilUsurio.html
+++ b/perfilUsurio.html
@@ -198,7 +198,7 @@
           <div class="card m-lg-3">
             <div class="card-body">
               <i class="fas fa-truck"></i>
-              <a href="direccionUsuario.html"> Historial de pedidos </a>
+              <a href="historialPedidos.html"> Historial de pedidos </a>
             </div>
           </div>
         </div>
@@ -206,7 +206,7 @@
           <div class="card m-lg-3">
             <div class="card-body">
               <i class="fas fa-file-invoice-dollar"></i>
-              <a href="#"> Facturas </a>
+              <a href="facturas.html"> Facturas </a>
             </div>
           </div>
         </div>
