dvis en col para cards

--- a/V2/nuevas-vistas/index.html
+++ b/V2/nuevas-vistas/index.html
@@ -304,7 +304,10 @@
           <div class=" col-lg-5 product-card-discount">
             <p>-5.3%</p>
           </div>
-          <div class="product-card-end">
+          <div class="col-lg-2 product-img">
+            <img src="../img/iconos/las-mejores-ofertas.png" alt="">
+          </div>
+          <div class="col-lg-5 product-card-end">
            <p>Solo esta <br>semana</p>
           </div>
         </div>
