Faltan botones del card

--- a/V2/nuevas-vistas/index.html
+++ b/V2/nuevas-vistas/index.html
@@ -298,21 +298,44 @@
     </div>
 
     <!--Cards-->
-    <div class="row mt-lg-4">
-      <div id="productCard" class="col-lg-3">
-        <div class=" row product-card">
-          <div class=" col-lg-5 product-card-discount">
-            <p>-5.3%</p>
+    <div class="row mt-lg-5 ml-lg-5">
+      <div class="col-lg-3">
+        <div class="card">
+          <div class="card-header">
+              <h3 id="discount">-5.3%</h3>
+              <img src="../img/iconos/las-mejores-ofertas.png" alt="">
+              <h3 id="end">Solo esta semana</h3>
           </div>
-          <div class="col-lg-2 product-img">
-            <img src="../img/iconos/las-mejores-ofertas.png" alt="">
+          <div class="card-title p-lg-4">
+            <img src="../img/referencias/ryzen3400g.jpg" alt="" class="card-img-top">
           </div>
-          <div class="col-lg-5 product-card-end">
-           <p>Solo esta <br>semana</p>
+          <div class="card-body">
+            <form action="" class="form-inline">
+              <button>
+                <i class="far fa-heart"></i>
+                2,566 Me gusta
+              </button>
+            </form>
+            <p>Procesador AMD RYZEN 5 3400G 3.70Ghz 4 Cores Socket AM4 </p>
+            <div style="border: 2px solid black; display: flex;">
+              <div style="border: 2px solid red;">
+                <form action="">
+                  <div class="form-group">
+                    <input type="submit" value="Añadir"><br/>
+                    <input type="submit" value="Comprar">
+                  </div>
+                </form>
+              </div>
+              <div style="border: 2px solid blue;">
+                <p>price</p>
+                <p>discount</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+   
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
